--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -332,8 +332,7 @@ body {
   #admin_panel-content_box,
   #stor_manager-content_box {
     width: 100%;
-    height: 100%;
-    padding: 20px; }
+    height: 100%; }
     #admin_panel-content_box h2,
     #stor_manager-content_box h2 {
       margin-top: 0;
@@ -402,59 +401,93 @@ body {
 
 #admin_panel {
   /*----------  Products  ----------*/
-  /*----------  Categories  ----------*/ }
-  #admin_panel-products tbody tr {
-    background: #f5f5f5; }
-  #admin_panel-products .admin_panel-products-col-desc {
-    width: 58%; }
-  #admin_panel-products .admin_panel-products-col-edit, #admin_panel-products .admin_panel-products-col-delete {
-    vertical-align: middle;
-    text-align: center;
-    width: 51px;
-    padding: 0 0px; }
-  #admin_panel-products .admin_panel-product-disabled {
-    background: rgba(217, 83, 79, 0.08); }
-  #admin_panel-categories-main_box {
-    overflow: hidden; }
-  #admin_panel-categories .categories-col-edit {
-    width: 108px; }
-  #admin_panel-categories .categories-col-remove {
-    width: 59px; }
-  #admin_panel-categories .categories-item {
-    /*=====  Edit mode od category name  ======*/ }
-    #admin_panel-categories .categories-item-form {
-      margin-bottom: 0; }
-    #admin_panel-categories .categories-item-name-input {
-      width: 50%;
-      display: none; }
-    #admin_panel-categories .categories-item-edit-yes, #admin_panel-categories .categories-item-edit-no {
-      display: none; }
-    #admin_panel-categories .categories-item-disabled {
+  /*----------  Categories  ----------*/
+  /*----------  Customers  ----------*/ }
+  #admin_panel-content_box.content_box-admin_panel_products {
+    padding-bottom: 6px; }
+  #admin_panel-content_box #categories-add-button {
+    top: 0; }
+  #admin_panel-products {
+    padding: 13px 20px 0; }
+    #admin_panel-products tbody tr {
+      background: #f5f5f5; }
+    #admin_panel-products .admin_panel-products-col-desc {
+      width: 58%; }
+    #admin_panel-products .admin_panel-products-col-edit, #admin_panel-products .admin_panel-products-col-delete {
+      vertical-align: middle;
+      text-align: center;
+      width: 51px;
+      padding: 0 0px; }
+    #admin_panel-products .admin_panel-product-disabled {
       background: rgba(217, 83, 79, 0.08); }
-    #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-name-value {
-      display: none; }
-    #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-name-input {
-      display: block !important; }
-    #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-edit_button {
-      display: none; }
-    #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-edit-yes, #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-edit-no {
-      display: inline-block; }
-  #admin_panel-categories .categories-add {
-    background: #f1f1f1;
-    border-top: 2px solid #c5c5c5; }
-    #admin_panel-categories .categories-add #categories-add-button {
-      top: 0; }
-  #admin_panel-categories-items {
-    overflow: auto;
+  #admin_panel-categories {
     height: 100%;
-    border-bottom: 1px solid #c1c1c1; }
+    padding: 10px 6px; }
+    #admin_panel-categories tbody tr {
+      background: #f5f5f5; }
+    #admin_panel-categories-page_size_option {
+      width: 67px;
+      float: right; }
+    #admin_panel-categories .categories-col-edit {
+      width: 108px;
+      text-align: right; }
+    #admin_panel-categories .categories-col-remove {
+      width: 59px;
+      text-align: right; }
+    #admin_panel-categories .categories-item {
+      /*=====  Edit mode od category name  ======*/ }
+      #admin_panel-categories .categories-item-form {
+        margin-bottom: 0; }
+      #admin_panel-categories .categories-item-name-input {
+        width: 50%;
+        display: none; }
+      #admin_panel-categories .categories-item-edit-yes, #admin_panel-categories .categories-item-edit-no {
+        display: none; }
+      #admin_panel-categories .categories-item-disabled {
+        background: rgba(217, 83, 79, 0.08); }
+      #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-name-value {
+        display: none; }
+      #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-name-input {
+        display: block !important; }
+      #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-edit_button {
+        display: none; }
+      #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-edit-yes, #admin_panel-categories .categories-item.categories-item-edit_button-edited .categories-item-edit-no {
+        display: inline-block; }
+    #admin_panel-categories .categories-add {
+      background: #f1f1f1;
+      border-top: 2px solid #c5c5c5; }
+      #admin_panel-categories .categories-add #categories-add-button {
+        top: 0; }
+    #admin_panel-categories-items {
+      height: 100%; }
+  #admin_panel-customers {
+    padding: 13px 20px 0; }
+    #admin_panel-customers-page_size_option {
+      width: 70px;
+      float: right; }
+    #admin_panel-customers tbody tr {
+      background: #f5f5f5; }
+      #admin_panel-customers tbody tr td {
+        vertical-align: middle; }
+    #admin_panel-customers .customers-role_name {
+      text-transform: capitalize; }
+      #admin_panel-customers .customers-role_name:last-child:after {
+        content: ''; }
+      #admin_panel-customers .customers-role_name:after {
+        content: ', '; }
+    #admin_panel-customers .customers-column-edit {
+      width: 154px; }
+    #admin_panel-customers .customers-column-delete {
+      width: 57px; }
 
 /*=====  End of Admin panel  ======*/
 /*----------  General Classes  ----------*/
 .page-main_box {
   height: 100%;
-  overflow: auto;
   padding-top: 20px; }
+  @media (max-width: 768px) {
+    .page-main_box {
+      overflow: auto; } }
 
 /*----------  Utility classes  ----------*/
 .vertical-middle {
@@ -463,19 +496,31 @@ body {
 .clear {
   clear: both; }
 
+.overflow-auto {
+  overflow: auto; }
+
+.height-100 {
+  height: 100%; }
+
 /*==================================
 =            Pagination            =
 ==================================*/
 .pagination {
   height: 100%;
   margin: 0;
-  padding: 17px 0 0;
+  padding: 9px 0 0;
   /**********/ }
   .pagination-height {
-    height: 6% !important; }
+    height: 5% !important; }
   .pagination_content-height {
-    height: 94% !important; }
+    height: 95% !important; }
   .pagination-item {
     height: 34px; }
+  .pagination-separator {
+    float: left;
+    padding: 1px 4px;
+    visibility: hidden; }
+  .pagination-set {
+    padding-bottom: 6px; }
 
 /*# sourceMappingURL=main.css.map */
