--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -480,6 +480,16 @@ body {
     #admin_panel-customers .customers-column-delete {
       width: 57px; }
 
+/**
+ *
+ * Edit customer modal panel
+ *
+ */
+#customers-edit_panel .customers-edit_panel-status {
+  float: left;
+  padding: 0 9px;
+  text-align: center; }
+
 /*=====  End of Admin panel  ======*/
 /*----------  General Classes  ----------*/
 .page-main_box {
