--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -666,6 +666,23 @@ $tableRowColor: #f5f5f5;
 }
 
 
+/**
+ *
+ * Edit customer modal panel
+ *
+ */
+
+#customers {
+    &-edit_panel {
+        .customers-edit_panel-status {
+            float: left;
+            padding: 0 9px;
+            text-align: center;
+        }
+    }
+}
+
+
 /*=====  End of Admin panel  ======*/
 
 
