--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -100,6 +100,9 @@ body {
   min-height: 321px;
   overflow: hidden;
   /*-------------*/ }
+  .products-item > h4 {
+    height: 19px;
+    overflow: hidden; }
   .products-item:hover {
     box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.38);
     position: relative;
@@ -403,7 +406,7 @@ body {
   /*----------  Products  ----------*/
   /*----------  Categories  ----------*/
   /*----------  Customers  ----------*/ }
-  #admin_panel-content_box.content_box-admin_panel_products {
+  #admin_panel-content_box.content_box-admin_panel_products, #admin_panel-content_box.content_box-admin_panel-users {
     padding-bottom: 6px; }
   #admin_panel-content_box #categories-add-button {
     top: 0; }
@@ -532,5 +535,19 @@ body {
     visibility: hidden; }
   .pagination-set {
     padding-bottom: 6px; }
+
+/*=======================================
+=            Custom elements            =
+=======================================*/
+.d-confirm_popup {
+  position: relative; }
+  .d-confirm_popup-popup {
+    right: 100%;
+    left: auto;
+    top: -11px;
+    min-width: auto;
+    width: 104px;
+    padding: 8px 0;
+    text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
