--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -472,6 +472,8 @@ body {
       background: #f5f5f5; }
       #admin_panel-customers tbody tr td {
         vertical-align: middle; }
+    #admin_panel-customers .customers-item-disabled {
+      background: rgba(217, 83, 79, 0.08); }
     #admin_panel-customers .customers-role_name {
       text-transform: capitalize; }
       #admin_panel-customers .customers-role_name:last-child:after {
