--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -501,6 +501,24 @@ body {
   float: left;
   padding: 0 9px;
   text-align: center; }
+#products-edit_panel-product_type label {
+  position: relative;
+  top: -2px;
+  padding-left: 3px; }
+#products-edit_panel-product_type-digital-box {
+  position: relative;
+  padding: 6px; }
+#products-edit_panel-product_type-regular:checked ~ #products-edit_panel-product_type-digital-box .overlay {
+  display: block; }
+#products-edit_panel-product_type .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  background: rgba(226, 226, 226, 0.53);
+  display: none;
+  left: 0;
+  border-radius: 5px; }
 
 /*=====  End of Admin panel  ======*/
 /*----------  General Classes  ----------*/
