--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -701,6 +701,30 @@ $tableRowColor: #f5f5f5;
             padding: 0 9px;
             text-align: center;
         }
+        &-product_type {
+            label {
+                position: relative;
+                top: -2px;
+                padding-left: 3px;
+            }
+            &-digital-box {
+                position: relative;
+                padding: 6px;
+            }
+            &-regular:checked ~ &-digital-box .overlay {
+                display: block;
+            }
+            .overlay {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                background: rgba(226, 226, 226, 0.53);
+                display: none;
+                left: 0;
+                border-radius: 5px;
+            }
+        }
     }
 }
 
