--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -4,6 +4,9 @@
 
 .dropup .dropdown-menu {
     left: -48px;
+    form {
+        margin-bottom: 0;
+    }
 }
 
 
@@ -706,6 +709,7 @@ $tableRowColor: #f5f5f5;
                 position: relative;
                 top: -2px;
                 padding-left: 3px;
+                cursor: pointer;
             }
             &-digital-box {
                 position: relative;
@@ -759,6 +763,10 @@ $tableRowColor: #f5f5f5;
 
 .height-100 {
     height: 100%;
+}
+
+.float-right {
+    float: right;
 }
 
 
